--- a/roles/database/tasks/main.yml
+++ b/roles/database/tasks/main.yml
@@ -31,7 +31,7 @@
   delay: 3
 
 - name: "Downloading sql file to server"
-  command: wget  -O {{ working_dir }}/db/w4l.sql "https://storage.lepusastro.com/s/oyRHwCu3urMQ1lT"
+  command: curl https://storage.lepusastro.com/s/7ADDsTLlcbvdEj6/download --output {{ working_dir }}/db/w4l.sql
 
 - name: "Copying sql file to container"
   command: docker cp {{ working_dir }}/db/w4l.sql
