--- a/roles/database/tasks/main.yml
+++ b/roles/database/tasks/main.yml
@@ -6,7 +6,7 @@
   with_items:
     - "docker-compose.yml"
 
-- name: "Removing existing db container"
+- name: "Removing existing DB container"
   docker_service:
     project_src: "{{ working_dir }}/db"
     state: absent
@@ -31,7 +31,7 @@
   delay: 3
 
 - name: "Downloading sql file to server"
-  command: curl https://storage.lepusastro.com/s/7ADDsTLlcbvdEj6/download --output {{ working_dir }}/db/w4l.sql
+  command: curl https://storage.lepusastro.com/s/Eq9P1tqgVOFrez1/download --output {{ working_dir }}/db/w4l.sql
 
 - name: "Copying sql file to container"
   command: docker cp {{ working_dir }}/db/w4l.sql
