--- a/roles/service-external/templates/docker-compose.yml
+++ b/roles/service-external/templates/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: "2.4"
 services:
   w4l-service-external:
     image: {{ docker_image }}
@@ -6,10 +6,11 @@ services:
     hostname: w4l-service-external
     volumes:
       - "{{ project_dir }}/service-external:/usr/src/app"
-    deploy:
-      resources:
-        limits:
-          cpus: '0.15'
+    cpus: 0.15
+    # deploy:
+    #   resources:
+    #     limits:
+    #       cpus: '0.15'
     networks:
       - w4l
       - main
