--- a/roles/service-files/templates/docker-compose.yml
+++ b/roles/service-files/templates/docker-compose.yml
@@ -4,11 +4,15 @@ services:
     image: {{ docker_image }}
     container_name: {{ container_name }}
     hostname: w4l-service-files
+    command: "npm start"
     ports:
       - "4000:4000"
     volumes:
       - "{{ project_dir }}/service-files:/usr/src/app"
     cpus: 0.15
+    working_dir: /usr/src/app
+    environment:
+      - NODE_ENV=production
     # deploy:
     #   resources:
     #     limits:
