--- a/roles/service-internal/templates/docker-compose.yml
+++ b/roles/service-internal/templates/docker-compose.yml
@@ -4,9 +4,13 @@ services:
     image: {{ docker_image }}
     container_name: {{ container_name }}
     hostname: w4l-service-internal
+    command: "npm start"
     volumes:
       - "{{ project_dir }}/service-internal:/usr/src/app"
     cpus: 0.15
+    working_dir: /usr/src/app
+    environment:
+      - NODE_ENV=production
     # deploy:
     #   resources:
     #     limits:
