--- a/roles/api/templates/docker-compose.yml
+++ b/roles/api/templates/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2.4"
+version: "3"
 services:
   w4l-api:
     image: {{ docker_image }}
@@ -9,14 +9,13 @@ services:
       - "5000:5000"
     volumes:
       - "{{ project_dir }}/api:/usr/src/app"
-    cpus: 0.15
     working_dir: /usr/src/app
     environment:
       - NODE_ENV=production
-    # deploy:
-    #   resources:
-    #     limits:
-    #       cpus: '0.15'
+    deploy:
+      resources:
+        limits:
+          cpus: '0.15'
     networks:
       - w4l
       - main
