--- a/roles/cms/vars/main.yml
+++ b/roles/cms/vars/main.yml
@@ -1,2 +1,42 @@
 # Container configuration
 container_name: w4l.cms
+
+# Environment variables
+
+APP_NAME : "Laravel"
+APP_ENV : "production"
+APP_KEY : "base64:KA2zgOeSnceUQr/GOoqD2M+Lr2iYnfYHhHWlkHxcWzk="
+APP_DEBUG : "false"
+
+## Service Api (Change)
+APP_URL : "http://mobile.dwr.go.th/"
+
+DWR_URL : "w4l.api/v1.0"
+DWR_USER : "dws_user"
+DWR_PASS : "dws_pass"
+PORT : "5000"
+
+## Service Files (Change)
+PATH_UPLOAD_FILE : "http://mobile.dwr.go.th/"
+
+DWR_UPLOAD_URL : "w4l.service.files/v1.0/upload"
+DWR_UPLOAD_PORT : "4000"
+DWR_DELETE_URL : "w4l.service.files/v1.0/delete_file"
+DWR_DELETE_PORT : "4000"
+
+DWR_TRIGGER_URL : "w4l.service.internal/v1.0/save_config"
+DWR_TRIGGER_PORT : "6000"
+DWR_TRIGGER_TOKEN : "5464372f-b619-545e-ac7d-7d516517d471"
+
+MAIL_SENDER : "dwr4thailand@gmail.com"
+MAIL_DRIVER : "smtp"
+MAIL_HOST : "smtp.gmail.com"
+MAIL_PORT : "587"
+MAIL_FROM_ADDRESS : "dwr4thailand@gmail.com"
+MAIL_FROM_NAME : "Example"
+MAIL_ENCRYPTION : "tls"
+MAIL_USERNAME : "dwr4thailand@gmail.com"
+MAIL_PASSWORD : "Dwr4thai"
+
+## Service Internal (Change)
+DWR_SOCKET : "http://api.mobile.dwr.go.th"
