--- a/roles/database/templates/docker-compose.yml
+++ b/roles/database/templates/docker-compose.yml
@@ -4,18 +4,14 @@ services:
     image: mariadb:10.3
     container_name: {{ container_name }}
     hostname: w4l-db
-    ports:
-      - "{{ public_port }}:3306"
     volumes:
       - "{{ project_dir }}/db/data:/var/lib/mysql"
       - "{{ project_dir }}/db/config:/etc/mysql"
     networks:
       - w4l
     environment:
-      MYSQL_USER: "{{ user }}"
-      MYSQL_PASSWORD: "{{ password }}"
       MYSQL_DATABASE: "{{ database }}"
-      MYSQL_ROOT_PASSWORD: "{{ root_password }}"
+      MYSQL_ROOT_PASSWORD: "{{ password }}"
     restart: always
 networks:
   w4l:
