--- a/roles/database/vars/main.yml
+++ b/roles/database/vars/main.yml
@@ -1,9 +1,8 @@
 # Database configuration
-user: "w4l"
-password: "passw@rdW4L"
-root_password: "mQsMKUXZjEKCmaFm"
-database: "w4l"
-public_port: 8989
-
-# Container configuration
 container_name: "w4l.db"
+
+host : "w4l.db"
+port : "3306"
+database : "w4l"
+user : "root"
+password : "mQsMKUXZjEKCmaFm"
