--- a/roles/cms/templates/.env
+++ b/roles/cms/templates/.env
@@ -35,3 +35,6 @@ MAIL_PASSWORD= {{ MAIL_PASSWORD }}
 
 ## Service Internal (Change)
 DWR_SOCKET= {{ DWR_SOCKET }}
+
+## Protcal HTTP,HTTPS
+REDIRECT_HTTPS= {{ REDIRECT_HTTPS }}
