--- a/roles/service-internal/tasks/main.yml
+++ b/roles/service-internal/tasks/main.yml
@@ -46,6 +46,11 @@
   become: yes
   become_user: root
 
+- name: "Removing node_modules"
+  command: rm -rf {{ project_dir }}/service-internal/node_modules
+  become: yes
+  become_user: root
+
 - name: "Running npm install"
   command: docker run --rm -v {{ project_dir }}/service-internal:/usr/src/app --name {{ container_name }} -w /usr/src/app {{ docker_image }}
            npm install
@@ -54,16 +59,3 @@
   docker_service:
     project_src: "{{ working_dir }}/service-internal"
     state: present
-  
-- name: "npm install pm2 version 3.2.2"
-  command: docker exec {{ container_name }} bash -c 'npm install pm2@3.2.2 -g'
-
-- name: "Running PM2 Watch"
-  command: docker exec {{ container_name }} bash -c 'pm2 start --name service_internal npm -- start --watch'
-
-- name: "Running PM2 Startup"
-  command: docker exec {{ container_name }} bash -c 'pm2 startup'
-
-- name: "Running PM2 Save"
-  command: docker exec {{ container_name }} bash -c 'pm2 save'
-
