--- a/roles/api/templates/.env
+++ b/roles/api/templates/.env
@@ -14,3 +14,11 @@ UPDATE_CONFIG_TOKEB= {{ UPDATE_CONFIG_TOKEB }}
 MAIL_SERVICE= {{ MAIL_SERVICE }}
 MAIL_USER= {{ MAIL_USER }}
 MAIL_PASS= {{ MAIL_PASS }}
+
+MOBILE_API_USERNAME: {{ MOBILE_API_USERNAME }}
+MOBILE_API_PASSWORD: {{ MOBILE_API_PASSWORD }}
+MOBILE_API_TOKEN: {{ MOBILE_API_TOKEN }}
+
+CMS_API_USERNAME: {{ CMS_API_USERNAME }}
+CMS_API_PASSWORD: {{ CMS_API_PASSWORD }}
+CMS_API_TOKEN: {{ CMS_API_TOKEN }}
