--- a/roles/api/vars/main.yml
+++ b/roles/api/vars/main.yml
@@ -14,3 +14,11 @@ UPDATE_CONFIG_TOKEB : "5464372f-b619-545e-ac7d-7d516517d471"
 MAIL_SERVICE : "gmail"
 MAIL_USER : "dwr4thailand@gmail.com"
 MAIL_PASS : "Dwr4thai"
+
+MOBILE_API_USERNAME : "mobile_w4l"
+MOBILE_API_PASSWORD : "cc04d7ce"
+MOBILE_API_TOKEN : "f9cf6c54-76f7-4257-9ea0-57e70accf8a4"
+
+CMS_API_USERNAME : "cms_w4l"
+CMS_API_PASSWORD : "be5f4398"
+CMS_API_TOKEN : "8a06c2dd-0382-45ec-a54f-8fbe121e3559"
