Update compose files

--- a/roles/api/templates/docker-compose.yml
+++ b/roles/api/templates/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: {{ container_name }}
     hostname: w4l-api
     command: "npm start"
+    # ports:
+    #   - "5000:5000"
     volumes:
       - "{{ project_dir }}/api:/usr/src/app"
     working_dir: /usr/src/app
