--- a/roles/service-files/templates/docker-compose.yml
+++ b/roles/service-files/templates/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: {{ container_name }}
     hostname: w4l-service-files
     command: "npm start"
+    # ports:
+    #   - "4000:4000"
     volumes:
       - "{{ project_dir }}/service-files:/usr/src/app"
     working_dir: /usr/src/app
