--- a/roles/service-files/templates/docker-compose.yml
+++ b/roles/service-files/templates/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: {{ docker_image }}
     container_name: {{ container_name }}
     hostname: w4l-service-files
-    command: "npm start"
+    command: "npm run production"
     # ports:
     #   - "4000:4000"
     volumes:
