--- a/roles/database/templates/docker-compose.yml
+++ b/roles/database/templates/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "{{ project_dir }}/db/config:/etc/mysql"
     networks:
       - w4l
+      - main
     environment:
       MYSQL_DATABASE: "{{ database }}"
       MYSQL_ROOT_PASSWORD: "{{ password }}"
@@ -17,3 +18,6 @@ networks:
   w4l:
     external:
       name: w4l-network
+  main:
+    external:
+      name: main-network
