--- a/roles/api/defaults/main.yml
+++ b/roles/api/defaults/main.yml
@@ -1,2 +1,2 @@
 api_branch: "master"
-api_repo: "git@git.piesoft.net:nuioutsource/api-dwr-cms.git"
+api_repo: "https://github.com/apaichon/PuppyFrameworkJS.git"
