--- a/roles/api/tasks/main.yml
+++ b/roles/api/tasks/main.yml
@@ -1,23 +1,11 @@
 ---
-- name: "Include variable from database roles"
-  include_vars:
-    file: roles/database/vars/main.yml
-    name: db
-    
-- name: "Sending docker-compose to server"
+- name: "Sending docker-compose and dockerfile to server"
   template:
     src: "{{ item }}"
     dest: "{{ working_dir }}/api/"
   with_items:
     - "docker-compose.yml"
-
-- name: "Sending .env to server"
-  template:
-    src: "{{ item }}"
-    dest: "{{ working_dir }}/api/"
-  with_items:
-    - ".env"
-
+    
 - name: "Removing existing API container"
   docker_service:
     project_src: "{{ working_dir }}/api"
@@ -35,14 +23,9 @@
     repo: "{{ api_repo }}"
     version: "{{ api_branch }}"
     dest: "{{ project_dir }}/api"
-    accept_hostkey: yes
-    force: yes
-    key_file: "{{ working_dir }}/common/deploy-key"
-  become: yes
-  become_user: root
-
-- name: "Copying .env file to container"
-  command: cp {{ working_dir }}/api/.env {{ project_dir }}/api/.env
+    # accept_hostkey: yes
+    # force: yes
+    # key_file: "{{ working_dir }}/common/deploy-key"
   become: yes
   become_user: root
 
@@ -51,11 +34,11 @@
   become: yes
   become_user: root
   
-- name: "Running npm install"
-  command: docker run --rm -v {{ project_dir }}/api:/usr/src/app --name {{ container_name }} -w /usr/src/app {{ docker_image }}
-           npm install
-
 - name: "Starting service api using docker-compose"
   docker_service:
     project_src: "{{ working_dir }}/api"
     state: present
+
+- name: "Running npm install"
+  command: docker exec -w /usr/src/app {{ container_name }}
+           npm install
